增加“两数之和”的实现以及测试代码

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,5 @@ project(algorithm)
 set(CMAKE_CXX_STANDARD 98)
 
 add_executable(packet packet.c)
-add_executable(twoSum TwoSum.c)
+add_executable(twoSum twoSum.c)
+add_executable(addLinkNum addLinkNum.c)
