查找最长子串，一个很烂的解

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,4 @@ set(CMAKE_CXX_STANDARD 98)
 add_executable(packet packet.c)
 add_executable(twoSum twoSum.c)
 add_executable(addLinkNum addLinkNum.c)
+add_executable(longestSubstring longestSubstring.c)
