修改最长子串的算法，大幅提高效率；添加有序数组去重的指针运算方式；

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,4 @@ add_executable(packet packet.c)
 add_executable(twoSum twoSum.c)
 add_executable(addLinkNum addLinkNum.c)
 add_executable(longestSubstring longestSubstring.c)
+add_executable(removeDuplicates removeDuplicates.c)
