修改移除有序数组中的重复数字的算法，增加寻找两个有序数组的中位数的题解

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,4 @@ add_executable(twoSum twoSum.c)
 add_executable(addLinkNum addLinkNum.c)
 add_executable(longestSubstring longestSubstring.c)
 add_executable(removeDuplicates removeDuplicates.c)
+add_executable(findMedian findMedian.c)
