--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,3 +18,4 @@ set(CMAKE_CXX_STANDARD 98)
 #add_executable(longestCommonPrefix longestCommonPrefix.c)
 #add_executable(mergeTwoLinkLists mergeTwoLinkLists.c)
 add_executable(strStr strStr.c)
+add_executable(searchInsert searchInsert.c)
