添加两个题解

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,5 @@ add_executable(addLinkNum addLinkNum.c)
 add_executable(longestSubstring longestSubstring.c)
 add_executable(removeDuplicates removeDuplicates.c)
 add_executable(findMedian findMedian.c)
+add_executable(effectBrackets effectBrackets.c)
+add_executable(removeElement removeElement.c)
