--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,11 +13,12 @@ set(CMAKE_CXX_STANDARD 98)
 #add_executable(zTransform zTransform.c)
 #add_executable(atoi atoi.c)
 #add_executable(palindrome palindrome.c)
-#add_executable(maxSubArrSum maxSubArrSum.c)
 #add_executable(romanToInt romanToInt.c)
 #add_executable(longestCommonPrefix longestCommonPrefix.c)
 #add_executable(mergeTwoLinkLists mergeTwoLinkLists.c)
-add_executable(effectBrackets effectBrackets.c)
-add_executable(removeElement removeElement.c)
-add_executable(strStr strStr.c)
-add_executable(searchInsert searchInsert.c)
+#add_executable(effectBrackets effectBrackets.c)
+#add_executable(removeElement removeElement.c)
+#add_executable(strStr strStr.c)
+#add_executable(searchInsert searchInsert.c)
+#add_executable(countAndSay countAndSay.c)
+add_executable(maxSubArrSum maxSubArrSum.c)
