新增题81,83的解

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,3 +22,5 @@ set(CMAKE_CXX_STANDARD 98)
 #add_executable(searchInsert searchInsert.c)
 #add_executable(countAndSay countAndSay.c)
 add_executable(maxSubArrSum maxSubArrSum.c)
+add_executable(deleteDuplicates deleteDuplicates_83.c)
+add_executable(deleteDuplicates_82 deleteDuplicates_82.c)
