--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,3 +22,5 @@ set(CMAKE_CXX_STANDARD 98)
 #add_executable(searchInsert searchInsert.c)
 #add_executable(countAndSay countAndSay.c)
 add_executable(maxSubArrSum maxSubArrSum.c)
+add_executable(lengthOfLastWord lengthOfLastWord_58.c)
+add_executable(plusOne plusOne_66.c)
