--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,8 +21,9 @@ set(CMAKE_CXX_STANDARD 98)
 #add_executable(strStr strStr.c)
 #add_executable(searchInsert searchInsert.c)
 #add_executable(countAndSay countAndSay.c)
-add_executable(maxSubArrSum maxSubArrSum.c)
-add_executable(lengthOfLastWord lengthOfLastWord_58.c)
-add_executable(plusOne plusOne_66.c)
-add_executable(deleteDuplicates deleteDuplicates_83.c)
-add_executable(deleteDuplicates_82 deleteDuplicates_82.c)
+#add_executable(maxSubArrSum maxSubArrSum.c)
+#add_executable(lengthOfLastWord lengthOfLastWord_58.c)
+#add_executable(plusOne plusOne_66.c)
+#add_executable(deleteDuplicates deleteDuplicates_83.c)
+#add_executable(deleteDuplicates_82 deleteDuplicates_82.c)
+add_executable(addBinary addBinary_67.c)
