--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,3 +27,5 @@ set(CMAKE_CXX_STANDARD 98)
 #add_executable(deleteDuplicates deleteDuplicates_83.c)
 #add_executable(deleteDuplicates_82 deleteDuplicates_82.c)
 add_executable(addBinary addBinary_67.c)
+add_executable(mySqrt mySqrt_69.c)
+add_executable(climbStairs climbStairs_70.c)
