--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,3 +29,5 @@ set(CMAKE_CXX_STANDARD 98)
 add_executable(addBinary addBinary_67.c)
 add_executable(mySqrt mySqrt_69.c)
 add_executable(climbStairs climbStairs_70.c)
+add_executable(mergeSortedArray mergeSortedArray_88.c)
+add_executable(isSameTree isSameTree_100.c)
