添加题:88的解

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,3 +31,4 @@ add_executable(mySqrt mySqrt_69.c)
 add_executable(climbStairs climbStairs_70.c)
 add_executable(mergeSortedArray mergeSortedArray_88.c)
 add_executable(isSameTree isSameTree_100.c)
+add_executable(pascalTriangle pascalTriangle_118.c)
