--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,3 +32,4 @@ add_executable(climbStairs climbStairs_70.c)
 add_executable(mergeSortedArray mergeSortedArray_88.c)
 add_executable(isSameTree isSameTree_100.c)
 add_executable(pascalTriangle pascalTriangle_118.c)
+add_executable(pascalTriangle_119 pascalTriangle_119.c)
