提交题121,122,125的解

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,3 +33,6 @@ add_executable(mergeSortedArray mergeSortedArray_88.c)
 add_executable(isSameTree isSameTree_100.c)
 add_executable(pascalTriangle pascalTriangle_118.c)
 add_executable(pascalTriangle_119 pascalTriangle_119.c)
+add_executable(maxProfit maxProfit_121.c)
+add_executable(maxProfit_122 maxProfit_122.c)
+add_executable(isPalindrome_125 isPalindrome_125.c)
