--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,3 +37,4 @@ add_executable(maxProfit maxProfit_121.c)
 add_executable(maxProfit_122 maxProfit_122.c)
 add_executable(isPalindrome_125 isPalindrome_125.c)
 add_executable(maxArea_11 maxArea_11.c)
+add_executable(isMatch isMatch_10.c)
