--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,15 +26,17 @@ set(CMAKE_CXX_STANDARD 98)
 #add_executable(plusOne plusOne_66.c)
 #add_executable(deleteDuplicates deleteDuplicates_83.c)
 #add_executable(deleteDuplicates_82 deleteDuplicates_82.c)
-add_executable(addBinary addBinary_67.c)
-add_executable(mySqrt mySqrt_69.c)
-add_executable(climbStairs climbStairs_70.c)
-add_executable(mergeSortedArray mergeSortedArray_88.c)
-add_executable(isSameTree isSameTree_100.c)
-add_executable(pascalTriangle pascalTriangle_118.c)
-add_executable(pascalTriangle_119 pascalTriangle_119.c)
-add_executable(maxProfit maxProfit_121.c)
-add_executable(maxProfit_122 maxProfit_122.c)
-add_executable(isPalindrome_125 isPalindrome_125.c)
-add_executable(maxArea_11 maxArea_11.c)
-add_executable(isMatch isMatch_10.c)
+#add_executable(addBinary addBinary_67.c)
+#add_executable(mySqrt mySqrt_69.c)
+#add_executable(climbStairs climbStairs_70.c)
+#add_executable(mergeSortedArray mergeSortedArray_88.c)
+#add_executable(isSameTree isSameTree_100.c)
+#add_executable(pascalTriangle pascalTriangle_118.c)
+#add_executable(pascalTriangle_119 pascalTriangle_119.c)
+#add_executable(maxProfit maxProfit_121.c)
+#add_executable(maxProfit_122 maxProfit_122.c)
+#add_executable(isPalindrome_125 isPalindrome_125.c)
+#add_executable(maxArea_11 maxArea_11.c)
+#add_executable(isMatch isMatch_10.c)
+add_executable(intToRoman 12_intToRoman.c)
+add_executable(threeSum 15_threeSum.c)
