完善题15的解

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.13)
 project(algorithm)
 set(CMAKE_CXX_STANDARD 98)
-
+add_library(thlib thsort.c thutils.c)
+link_libraries(thlib)
 #add_executable(packet packet.c)
 #add_executable(twoSum twoSum.c)
 #add_executable(addLinkNum addLinkNum.c)
@@ -40,3 +41,4 @@ set(CMAKE_CXX_STANDARD 98)
 #add_executable(isMatch isMatch_10.c)
 add_executable(intToRoman 12_intToRoman.c)
 add_executable(threeSum 15_threeSum.c)
+add_executable(test test.c)
