--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,4 +42,5 @@ link_libraries(thlib)
 add_executable(intToRoman 12_intToRoman.c)
 add_executable(threeSum 15_threeSum.c)
 add_executable(16_threeSumClosest 16_threeSumClosest.c)
+add_executable(17_letterCombinations 17_letterCombinations.c)
 add_executable(test test.c)
