--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.13)
 project(algorithm)
 set(CMAKE_CXX_STANDARD 98)
-add_library(thlib thsort.c thutils.c)
+add_library(thlib thsort.c thutils.c 18_fourSum.c)
 link_libraries(thlib)
 #add_executable(packet packet.c)
 #add_executable(twoSum twoSum.c)
@@ -39,8 +39,9 @@ link_libraries(thlib)
 #add_executable(isPalindrome_125 isPalindrome_125.c)
 #add_executable(maxArea_11 maxArea_11.c)
 #add_executable(isMatch isMatch_10.c)
-add_executable(intToRoman 12_intToRoman.c)
-add_executable(threeSum 15_threeSum.c)
-add_executable(16_threeSumClosest 16_threeSumClosest.c)
-add_executable(17_letterCombinations 17_letterCombinations.c)
+#add_executable(intToRoman 12_intToRoman.c)
+#add_executable(threeSum 15_threeSum.c)
+#add_executable(16_threeSumClosest 16_threeSumClosest.c)
+#add_executable(17_letterCombinations 17_letterCombinations.c)
+add_executable(18_fourSum 18_fourSum.c)
 add_executable(test test.c)
