--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.13)
 project(algorithm)
 set(CMAKE_CXX_STANDARD 98)
-add_library(thlib thsort.c thutils.c 18_fourSum.c)
+add_library(thlib thsort.c thutils.c)
 link_libraries(thlib)
 #add_executable(packet packet.c)
 #add_executable(twoSum twoSum.c)
@@ -44,4 +44,5 @@ link_libraries(thlib)
 #add_executable(16_threeSumClosest 16_threeSumClosest.c)
 #add_executable(17_letterCombinations 17_letterCombinations.c)
 add_executable(18_fourSum 18_fourSum.c)
+add_executable(19_removeNthFromEnd 19_removeNthFromEnd.c)
 add_executable(test test.c)
